[package]
name = "rust_asana"
description = "A Rust client for the Asana API"
version = "0.1.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
